Update SecurityConfig, SwaggerConfig, and JwtAuthenticationFilter with file headers; modify AdminUser to ensure groups list is initialized with an empty ArrayList using Builder.Default